- Fixed issue with Entity ECA rules where fields set to null were reset
  back to the value from the DB
- Fixed issues with export with dependents including making sure all
  auto-reverse relationships are in place and properly handing
  relationships with titles when deferring export for fk dependency
- Fixed issue where secondary sequenced ID did not preserve disableAuthz

===========================================================================
Release 1.3.0 - 27 July 2013
===========================================================================

Moqui Framework 1.3.0 is a major new feature and bug fix release. The major
new features include the EntityFacade Data Document, Data Feed, and Data
Search (based on ElasticSearch) features, the User Notification Message
feature, and various improvements to XML Screens and Forms. This release is
backward compatible with Moqui Framework release 1.2.0 with the exception
that the StatusValidChange entity is deprecated by the new
StatusFlowTransition entity.

When updating to Moqui 1.3.0 from 1.2.0 or earlier existing databases may
need to be updated because the Entity Facade now uses full entity names
(with the package included in the name) for everything. The
SequenceValueItem.seqName may contain plain entity names (without package)
that need to be changed to full entity names (with package). This can be
done by adding records with the full entity name in the seqName field with
the same value as the original record in seqNum.

New Features:

- Updated Gradle build files to work with Gradle 1.6 (may not work with
  earlier versions)
- Updated Apache Camel to 2.11.1, Apache Commons Validator to 1.4.0,
  Apache Derby to 10.10.1.1, ehcache to 2.7.2, Freemarker to 2.3.20,
  Groovy to 2.1.6, Quartz Scheduler to 2.1.7
- Added ElasticSearch 0.90.2 and Lucene 4.3.1 ElasticSearch files are under
  runtime/elasticsearch and it is initialized and destroyed with the rest
  of the framework